--- a/style.css
+++ b/style.css
@@ -45,4 +45,6 @@ html {
     top:50%;
     transform-origin: 100%;
     transform: rotate(90deg);
+    transition: all 0.05s;
+    transition-timing-function: cubic-bezier(0, 0, 0.32, 1.39);
   }
